fix pachimari image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta property="og:url" content="https://lemonion.github.io/" />
         <meta property="og:title" content="Test Site With OG Data" />
         <meta property="og:description" content="This is the description for Test Site With OG Data" />
-        <meta property="og:image" content="https://lemonion.github.io/pachimari.jpg" />
+        <meta property="og:image" content="https://lemonion.github.io/pachimari.png" />
     </head>
     <body>
         <h1>Test Site With OG Data</h1>
